--- a/app/templates/base.html
+++ b/app/templates/base.html
@@ -18,13 +18,19 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="#">Twitter</a>
+            <a class="navbar-brand" href="{{ url_for('main.index')}}">Twitter</a>
         </div>
         <div class="navbar-collapse collapse">
             <ul class="nav navbar-nav">
-                <li><a href="#">Home</a></li>
+                <li><a href="{{ url_for('main.index')}}">Home</a></li>
             </ul>
             <ul class="nav navbar-nav navbar-right">
+                {% if current_user.is_authenticated %}
+                <li><a href="{{ url_for('main.user', username=current_user.username) }}">Profile</a></li>
+                <li><a href="{{ url_for('auth.logout') }}">Log Out</a></li>
+                {% else %}
+                <li><a href="{{ url_for('auth.login') }}">Log In</a></li>
+                {% endif %}
                 
                
             </ul>
@@ -43,10 +49,13 @@
     {% endfor %}
 
     {% block page_content %}{% endblock %}
+    
 </div>
+
 {% endblock %}
 
 {% block scripts %}
 {{ super() }}
+{{ moment.include_moment() }}
 
 {% endblock %}
