--- a/app/templates/index.html
+++ b/app/templates/index.html
@@ -8,20 +8,34 @@
 
 {% if current_user.is_authenticated %}
 {{wtf.quick_form(form)}}
+
 {% endif %}
 
-<ul class="posts">
+<ul class="tweets">
+    
     {% for tweet in tweets %}
-    <li class="post">
-        <div class="post_date">{{ moment(tweet.created_at, 'MMDDYYYY').fromNow() }}</div>
-        <div class="post-author">
-            <a href="{{ url_for('main.user', username=tweet.author.username) }}"> {{ tweet.author.username }}</a>
+    
+
+        <li class="tweet">
             
+        <div class = "tweet-content">
+            
+            
+            <div class="tweet-date">{{ moment(tweet.created_at, 'MMDDYYYY').fromNow() }}</div>
+            <div class="tweet-author">
+                <a href="{{ url_for('main.user', username=tweet.author.username) }}"> by {{ tweet.author.username }}</a>
+                
+            </div>
+            <div class="tweet-body"> {{ tweet.text }}</div>
+            <div class="tweet-comment"> <a href="{{ url_for('main.tweet', tweet_id=tweet.id) }}">Comment</a></div>
+        
         </div>
-        <div class="post-body"> {{ tweet.text }}</div>
-        <div class="post-comment"> <a href="{{ url_for('main.tweet', tweet_id=tweet.id) }}">Comment</a></div>
-    </li>
+
+        </li>
+
+    
     {% endfor %}
+
 </ul>
 
 
