--- a/app/static/styles.css
+++ b/app/static/styles.css
@@ -1,13 +1,4 @@
-.profile-thumbnail {
-    position: absolute;
-}
-.profile-header {
-    min-height: 260px;
-    margin-left: 280px;
-}
-div.post-tabs {
-    margin-top: 16px;
-}
+
 ul.tweets {
     list-style-type: none;
     padding: 0px;
@@ -16,10 +7,7 @@ ul.tweets {
     display: block;
     
 }
-div.post-tabs ul.posts {
-    margin: 0px;
-    border-top: none;
-}
+
 ul.tweets li.tweet {
     padding: 8px;
     border-bottom: 1px solid #e0e0e0;
@@ -33,9 +21,6 @@ div.tweet-date {
 }
 div.tweet-author {
     font-weight: bold;
-}
-div.post-thumbnail {
-    position: absolute;
 }
 div.tweet-content {
     margin-left: 48px;
@@ -66,48 +51,17 @@ div.comment-date {
 div.comment-author {
     font-weight: bold;
 }
-div.comment-thumbnail {
-    position: absolute;
-}
-div.comment-content {
+
+div.comment-body {
     margin-left: 48px;
     min-height: 48px;
 }
 div.comment-form {
     margin: 16px 0px 16px 32px;
 }
-div.pagination {
-    width: 100%;
-    text-align: right;
-    padding: 0px;
-    margin: 0px;
-}
-div.flask-pagedown-preview {
-    margin: 10px 0px 10px 0px;
-    border: 1px solid #e0e0e0;
-    padding: 4px;
-}
-div.flask-pagedown-preview h1 {
-    font-size: 140%;
-}
-div.flask-pagedown-preview h2 {
-    font-size: 130%;
-}
-div.flask-pagedown-preview h3 {
-    font-size: 120%;
-}
-.tweet-body h1 {
-    font-size: 140%;
-}
-.tweet-body h2 {
-    font-size: 130%;
-}
-.tweet-body h3 {
-    font-size: 120%;
-}
-.table.followers tr {
-    border-bottom: 1px solid #e0e0e0;
 
+div.tweet-body h3 {
+    font-size: 120%;
 }
 
 li {
